Removed then added base16 as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "base16-vim"]
 	path = base16-vim
 	url = /depository/system/dotfiles-cli/nvim/.config/nvim/bundle/base16-vim/
+[submodule "nvim/.config/nvim/bundle/base16-vim"]
+	path = nvim/.config/nvim/bundle/base16-vim
+	url = /depository/system/dotfiles-cli/nvim/.config/nvim/bundle/base16-vim/
