--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "base16-shell"]
 	path = base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
+[submodule "vim/.vim/bundle/base16-shell"]
+	path = vim/.vim/bundle/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
+[submodule "vim/.vim/bundle/base16-vim"]
+	path = vim/.vim/bundle/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
