--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "base16-shell"]
-	path = base16-shell
+	path = base16-shell/.config/base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
 [submodule "vim/.vim/bundle/base16-shell"]
 	path = vim/.vim/bundle/base16-shell
