--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/.vim/bundle/rust.vim"]
 	path = vim/.vim/bundle/rust.vim
 	url = https://github.com/rust-lang/rust.vim.git
+[submodule "base16-shell/.config/base16-shell"]
+	path = base16-shell/.config/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
