--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "base16-shell/.config/base16-shell"]
 	path = base16-shell/.config/base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
+[submodule "vim/.vim/bundle/vim-glsl"]
+	path = vim/.vim/bundle/vim-glsl
+	url = https://github.com/tikhomirov/vim-glsl
