--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/.vim/bundle/vim-glsl"]
 	path = vim/.vim/bundle/vim-glsl
 	url = https://github.com/tikhomirov/vim-glsl
+[submodule "vim/.vim/bundle/vim-commentary"]
+	path = vim/.vim/bundle/vim-commentary
+	url = https://github.com/tpope/vim-commentary.git
